--- a/index.html
+++ b/index.html
@@ -3,266 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Memories</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400&family=Dancing+Script:wght@600;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <title>Image Display</title>
     <style>
-        :root {
-            --cream: #f8f3ea;
-            --warm-white: #fdfaf5;
-            --rose: #c0535a;
-            --deep: #2c1f1f;
-            --gold: #c9a96e;
-            --light-gold: #e8d5b0;
-            --blush: #e8a0a0;
-            --shadow: rgba(44,31,31,0.14);
-        }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            background-color: var(--cream);
-            background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none'%3E%3Cg fill='%23c9a96e' fill-opacity='0.08'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-            min-height: 100vh;
-            padding: 60px 20px 80px;
-            font-family: 'Lato', sans-serif;
+            background-color: #f8f3ea;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Arial', sans-serif;
         }
-
-        /* ── Title ── */
-        .page-title { text-align: center; margin-bottom: 80px; }
-        .page-title::before, .page-title::after {
-            content: ''; display: block; height: 1px;
-            background: linear-gradient(to right, transparent, var(--gold), transparent);
-            margin: 16px auto; width: 280px;
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            text-align: center;
         }
-        .page-title h1 {
-            font-family: 'Dancing Script', cursive;
-            font-size: clamp(3rem, 8vw, 5.5rem);
-            color: var(--rose); line-height: 1;
-            text-shadow: 2px 3px 0 var(--light-gold);
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            display: block;
         }
-        .page-title .sub {
-            font-weight: 300; letter-spacing: 0.35em;
-            text-transform: uppercase; font-size: 0.75rem; color: var(--gold);
-        }
-
-        /* ── Timeline ── */
-        .timeline { max-width: 1100px; margin: 0 auto; position: relative; }
-        .timeline::before {
-            content: ''; position: absolute;
-            left: 50%; top: 0; bottom: 0; width: 2px;
-            background: linear-gradient(to bottom, transparent, var(--gold) 5%, var(--gold) 95%, transparent);
-            transform: translateX(-50%);
-        }
-
-        .date-section {
-            margin-bottom: 80px;
-            opacity: 0; transform: translateY(28px);
-            animation: fadeUp 0.65s ease forwards;
-        }
-        @keyframes fadeUp { to { opacity:1; transform:translateY(0); } }
-
-        .date-badge {
-            position: relative; z-index: 2;
-            display: flex; flex-direction: column; align-items: center;
-            margin-bottom: 36px;
-        }
-        .date-badge .dot {
-            width: 18px; height: 18px; border-radius: 50%;
-            background: var(--rose); border: 3px solid var(--cream);
-            box-shadow: 0 0 0 2px var(--rose); margin-bottom: 12px;
-        }
-        .date-section.valentine .date-badge .dot { animation: pulse 1.5s ease infinite; }
-        @keyframes pulse {
-            0%,100% { box-shadow: 0 0 0 2px var(--rose); }
-            50%      { box-shadow: 0 0 0 7px rgba(192,83,90,0.2); }
-        }
-        .date-badge .label {
-            font-family: 'Playfair Display', serif; font-style: italic;
-            font-size: 1.1rem; color: var(--deep);
-            background: var(--warm-white); border: 1px solid var(--light-gold);
-            border-radius: 30px; padding: 6px 24px;
-            box-shadow: 0 4px 18px var(--shadow); white-space: nowrap;
-        }
-        .date-section.valentine .date-badge .label { color: var(--rose); border-color: var(--blush); }
-
-        .photos-row { display: flex; justify-content: center; gap: 28px; flex-wrap: wrap; padding: 0 10px; }
-
-        /* ── Polaroid ── */
-        .photo-card {
-            background: var(--warm-white); padding: 14px 14px 50px; width: 240px;
-            box-shadow: 4px 6px 24px var(--shadow), 0 1px 3px rgba(0,0,0,0.08);
-            cursor: pointer; position: relative; flex-shrink: 0;
-            transition: transform 0.35s cubic-bezier(0.34,1.56,0.64,1), box-shadow 0.35s ease;
-        }
-        .photo-card::before {
-            content: ''; position: absolute; top: -12px; left: 50%;
-            transform: translateX(-50%) rotate(-2deg);
-            width: 60px; height: 24px; background: rgba(201,169,110,0.35); border-radius: 2px;
-        }
-        .photo-card:nth-child(even)::before { transform: translateX(-50%) rotate(2deg); }
-        .photo-card::after {
-            content: ''; position: absolute; bottom: 0; right: 0;
-            border-style: solid; border-width: 0 0 20px 20px;
-            border-color: transparent transparent var(--cream) transparent;
-            transition: border-width 0.3s;
-        }
-        .photo-card:hover::after { border-width: 0 0 30px 30px; }
-        .photo-card img {
-            width: 100%; height: 210px; object-fit: cover; display: block;
-            filter: sepia(18%) contrast(1.05) saturate(0.9); transition: filter 0.35s;
-            pointer-events: none; user-select: none;
-        }
-        .photo-card:hover img { filter: sepia(0%) contrast(1.08) saturate(1.1); }
-        .photo-card .caption {
-            position: absolute; bottom: 0; left: 0; right: 0; height: 50px;
-            display: flex; align-items: center; justify-content: center;
-            font-family: 'Dancing Script', cursive; font-size: 1.2rem;
-            color: var(--deep); padding: 0 10px; text-align: center; user-select: none;
-        }
-        .photo-card:nth-child(odd){transform:rotate(-4deg)}
-        .photo-card:nth-child(even){transform:rotate(2deg) translateY(-5px)}
-        .photo-card:hover { transform:rotate(0deg) scale(1.08) translateY(-8px)!important; z-index:50; box-shadow:8px 16px 40px rgba(44,31,31,0.24); }
-
-        /* ── Lightbox ── */
-        .lightbox { position: fixed; inset: 0; background: rgba(12,6,6,0.95); z-index: 1000; display: none; align-items: center; justify-content: center; backdrop-filter: blur(8px); }
-        .lightbox.open { display: flex; }
-        #lbImg { max-width: min(90vw, 900px); max-height: 80vh; object-fit: contain; background: var(--warm-white); padding: 10px 10px 45px; box-shadow: 0 30px 80px rgba(0,0,0,0.8); display: block; animation: lbIn 0.3s ease; }
-        @keyframes lbIn { from{opacity:0;transform:scale(0.95)} to{opacity:1;transform:scale(1)} }
-        .lb-cap { position: absolute; bottom: 12px; left: 0; right: 0; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: var(--deep); text-align: center; }
-        .lb-close { position: fixed; top: 20px; right: 25px; background: none; border: none; color: white; font-size: 3rem; cursor: pointer; opacity: 0.7; transition: 0.2s; z-index: 1002; }
-        .lb-arrow { position: fixed; top: 50%; transform: translateY(-50%); background: rgba(255,255,255,0.1); border: none; color: white; width: 60px; height: 60px; border-radius: 50%; font-size: 2rem; cursor: pointer; z-index: 1002; display: flex; align-items: center; justify-content: center; }
-        #lbPrev{left:20px} #lbNext{right:20px}
-        .lb-counter { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); color: rgba(255,255,255,0.5); font-size: 0.8rem; letter-spacing: 0.2em; }
-
-        footer { text-align: center; margin-top: 80px; font-family: 'Dancing Script', cursive; font-size: 1.6rem; color: var(--rose); opacity: 0.6; padding-bottom: 40px; }
-
-        @media (max-width: 680px) {
-            .timeline::before { display: none; }
-            .photo-card { width: 160px; padding: 10px 10px 40px; }
-            .photo-card img { height: 160px; }
-            .lb-arrow { width: 45px; height: 45px; font-size: 1.5rem; }
+        p {
+            color: #c0535a;
+            font-style: italic;
+            margin-top: 15px;
         }
     </style>
 </head>
 <body>
 
-<div class="page-title">
-    <p class="sub">a collection of</p>
-    <h1>Our Memories</h1>
-    <p class="sub">forever & always</p>
+<div class="container">
+    <img src="https://raw.githubusercontent.com/Duveyji/livephotos/main/1.png" alt="Our Memory">
+    <p>A cherished moment</p>
 </div>
 
-<div class="timeline" id="timeline"></div>
-<footer>made with ♥</footer>
-
-<div class="lightbox" id="lightbox">
-    <button class="lb-close" id="lbClose">×</button>
-    <button class="lb-arrow" id="lbPrev">‹</button>
-    <button class="lb-arrow" id="lbNext">›</button>
-    <div style="position:relative">
-        <img id="lbImg" src="" alt="">
-        <div class="lb-cap" id="lbCap"></div>
-    </div>
-    <div class="lb-counter" id="lbCounter"></div>
-</div>
-
-<script>
-// ——— DATA CONFIGURATION ———
-// Using Relative Paths (since images are in the same folder as index.html)
-const DATES = [
-    {
-        key: 'part-one',
-        label: 'The Journey Begins',
-        valentine: false,
-        photos: [
-            { src: '1.png', caption: 'Special Moments' },
-            { src: '2.png', caption: 'The Sweetest Day' }
-        ]
-    },
-    {
-        key: 'valentine-special',
-        label: '14 February 2026 ♥',
-        valentine: true,
-        photos: [
-            { src: '3.png', caption: 'Valentine Surprise' },
-            { src: '4.jpg', caption: 'Together Forever' }
-        ]
-    }
-];
-
-// ——— ENGINE ———
-let lbPhotos = [];
-let lbIdx = 0;
-
-function render() {
-    const tl = document.getElementById('timeline');
-    tl.innerHTML = '';
-    lbPhotos = [];
-
-    DATES.forEach((d, di) => {
-        const photos = d.photos.filter(p => p.src);
-        photos.forEach(p => lbPhotos.push(p));
-
-        const sec = document.createElement('div');
-        sec.className = 'date-section' + (d.valentine ? ' valentine' : '');
-        sec.style.animationDelay = (0.1 + di * 0.2) + 's';
-        sec.innerHTML = `<div class="date-badge"><div class="dot"></div><div class="label">${d.label}</div></div>`;
-
-        const row = document.createElement('div');
-        row.className = 'photos-row';
-
-        let globalStart = lbPhotos.length - photos.length;
-        photos.forEach((photo, pi) => {
-            const card = document.createElement('div');
-            card.className = 'photo-card';
-            card.innerHTML = `<img src="${photo.src}" alt="${photo.caption}"><div class="caption">${photo.caption}</div>`;
-            const idx = globalStart + pi;
-            card.onclick = () => openLB(idx);
-            row.appendChild(card);
-        });
-
-        sec.appendChild(row);
-        tl.appendChild(sec);
-    });
-}
-
-function openLB(idx) {
-    lbIdx = idx;
-    document.getElementById('lightbox').classList.add('open');
-    document.body.style.overflow = 'hidden';
-    drawLB();
-}
-
-function closeLB() {
-    document.getElementById('lightbox').classList.remove('open');
-    document.body.style.overflow = '';
-}
-
-function drawLB() {
-    const p = lbPhotos[lbIdx];
-    const img = document.getElementById('lbImg');
-    img.src = p.src;
-    document.getElementById('lbCap').textContent = p.caption;
-    document.getElementById('lbCounter').textContent = `${lbIdx + 1} / ${lbPhotos.length}`;
-}
-
-function nav(delta) {
-    lbIdx = (lbIdx + delta + lbPhotos.length) % lbPhotos.length;
-    drawLB();
-}
-
-document.getElementById('lbClose').onclick = closeLB;
-document.getElementById('lbPrev').onclick = (e) => { e.stopPropagation(); nav(-1); };
-document.getElementById('lbNext').onclick = (e) => { e.stopPropagation(); nav(1); };
-document.getElementById('lightbox').onclick = (e) => { if(e.target.id === 'lightbox' || e.target.id === 'lbClose') closeLB(); };
-
-// Keyboard navigation
-document.addEventListener('keydown', (e) => {
-    if (!document.getElementById('lightbox').classList.contains('open')) return;
-    if (e.key === 'ArrowLeft') nav(-1);
-    if (e.key === 'ArrowRight') nav(1);
-    if (e.key === 'Escape') closeLB();
-});
-
-render();
-</script>
 </body>
 </html>
