Fix description text and add newline at end of file

--- a/Pics/iindex.html
+++ b/Pics/iindex.html
@@ -402,7 +402,7 @@ const PHOTOS = [
     title:    "The Jivdani Temple",
     date:     "24 Dec 2025",
     location: "Virar",
-    desc:     "Christmas Eve at the temple — we climbed all those steps and you held my hand on the way down. The view from the top was stunning, but I wasn't really looking at the view.",
+    desc:     "At the temple — we climbed all those steps and you held my hand on the way down. The view from the top was stunning, but I wasn't really looking at the view.",
     images:   [ BASE + "2.jpg" ]
   },
 
