--- a/Pics/iindex.html
+++ b/Pics/iindex.html
@@ -432,7 +432,7 @@ const PHOTOS = [
     title:    "Miraj Dattani - Movie",
     date:     "26 Jan 2026",
     location: "Vasai",
-    desc:     "You covered your eyes during the scary parts and then pretended you weren't scared. I didn't say anything. 😄",
+    desc:     "Looking back at the movie, the Beauty and the Beast element was definitely the highlight of the entire Border 2 experience. 😄",
     images:   [ BASE + "11.jpeg", BASE + "11a.jpeg" ]
   },
   {
